# alice-lri

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Horizontal.md  LICENSE  README.md  clion_conan.sh  conanfile.py  env_wrapper.sh  environment.yml  old_timing_results.csv  out.json  out2.json  parallel_runner.py  timing_results.csv  trace.txt  trace_original.txt
.devcontainer/: Dockerfile  devcontainer.json
doc/: HorizontalEstimationSequence.puml
docs/: Doxyfile  README.md  conf.py  cpp_api.rst  cpp_api_advanced.rst  getting_started.rst  index.rst  installation.rst  python_api.rst  python_api_advanced.rst  requirements.txt
examples/: CMakeLists.txt  CMakeUserPresets.json  FileUtils.cpp  FileUtils.h  conanfile.txt  config.json  eigen_lazy_vs_immediate.cpp  eigen_loop_vs_select.cpp  intrinsics_to_sql.cpp  kitti_basic.cpp  main.cpp  main_sql.cpp  main_train_ri.cpp  measure_times.cpp  some_tests.cpp
examples/resources/: experiments_db.sql  migration_3.sql  migration_5.sql
lib/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  conanfile.txt  sources.cmake
lib/cmake/: accurate_riConfig.cmake.in  alice_lriConfig.cmake.in
lib/include/: accurate_ri.h
lib/include/accurate_ri/: AliceArray.hpp  AliceString.h  Api.h  Array.hpp  Result.h  Utils.hpp  accurate_ri.hpp  public_structs.hpp
lib/include/alice_lri/: AliceArray.hpp  AliceString.h  Api.h  ApiGuards.hpp  Core.hpp  Result.h  Result.hpp  Structs.hpp  alice_lri.hpp  public_structs.hpp
lib/include/alice_lri/util/: AliceArray.hpp  AliceString.hpp
lib/src/: AliceArray.cpp  AliceString.cpp  Array.cpp  BuildOptions.h.in  Constants.h  Result.cpp  Utils.cpp  accurate_ri.cpp  alice_lri.cpp  logger.h  public_structs.cpp
lib/src/hash/: HashUtils.cpp  HashUtils.h
lib/src/hough/: HoughStructs.h  HoughTransform.cpp  HoughTransform.h
lib/src/includeimpl/: Core.cpp  Result.cpp  Structs.cpp
lib/src/includeimpl/util/: AliceString.cpp
lib/src/intrinsics/: HorizontalIntrinsicsEstimator.cpp  HorizontalIntrinsicsEstimator.h  IntrinsicsEstimator.cpp  IntrinsicsEstimator.h  VerticalIntrinsicsEstimator.cpp  VerticalIntrinsicsEstimator.h
lib/src/intrinsics/horizontal/: HorizontalIntrinsicsEstimator.cpp  HorizontalIntrinsicsEstimator.h  HorizontalIntrinsicsStructs.h
lib/src/intrinsics/horizontal/coarsetofine/: CoarseToFineHorizontalIntrinsicsEstimator.cpp  CoarseToFineHorizontalIntrinsicsEstimator.h
lib/src/intrinsics/horizontal/helper/: HorizontalLogging.cpp  HorizontalLogging.h  HorizontalMath.cpp  HorizontalMath.h  HorizontalScanlineArray.cpp  HorizontalScanlineArray.h  HorizontalStructs.h  PeriodicFit.cpp  PeriodicFit.h  PeriodicFitter.cpp  PeriodicFitter.h  SegmentedMedianLinearRegressor.cpp  SegmentedMedianLinearRegressor.h  SegmentedMedianSlopeEstimator.cpp  SegmentedMedianSlopeEstimator.h
lib/src/intrinsics/horizontal/multiline/: CustomEstimator.cpp  PeriodicMultilineFitter.cpp  PeriodicMultilineFitter.h
lib/src/intrinsics/horizontal/newmultiline/: PeriodicFit.cpp  PeriodicFit.h
lib/src/intrinsics/horizontal/offset/: RansacHOffset.cpp  RansacHOffset.h
lib/src/intrinsics/horizontal/resolution/: MadResolutionLoss.cpp  MadResolutionLoss.h
lib/src/intrinsics/vertical/: VerticalIntrinsicsEstimator.cpp  VerticalIntrinsicsEstimator.h  VerticalIntrinsicsStructs.h  VerticalStructs.h
lib/src/intrinsics/vertical/conflict/: IntersectionCalculator.cpp  IntersectionCalculator.h  ScanlineConflictEvaluator.cpp  ScanlineConflictEvaluator.h  ScanlineConflictSolver.cpp  ScanlineConflictSolver.h  ScanlineConflictStructs.h
lib/src/intrinsics/vertical/estimation/: VerticalHeuristicEstimator.cpp  VerticalHeuristicEstimator.h  VerticalHeuristicsEstimator.cpp  VerticalHeuristicsEstimator.h  VerticalHeuristicsStructs.h  VerticalScanlineEstimation.cpp  VerticalScanlineEstimation.h  VerticalScanlineEstimationStructs.h  VerticalScanlineEstimator.cpp  VerticalScanlineEstimator.h  VerticalScanlineLimits.cpp  VerticalScanlineLimits.h
lib/src/intrinsics/vertical/helper/: JsonConverters.cpp  JsonConverters.h  VerticalLogging.cpp  VerticalLogging.h
lib/src/intrinsics/vertical/pool/: VerticalScanlinePool.cpp  VerticalScanlinePool.h
lib/src/math/: LinearRegressor.cpp  LinearRegressor.h  Stats.cpp  Stats.h  Trigonometry.cpp  Trigonometry.h
lib/src/plotty/: matplotlibcpp.cpp  matplotlibcpp.hpp
lib/src/point/: PointArray.cpp  PointArray.h  PointUtils.cpp  PointUtils.h
lib/src/rangeimage/: RangeImageUtils.cpp  RangeImageUtils.h
lib/src/ransac/: CustomEstimator.cpp  CustomEstimator.h  CustomRansac.cpp  CustomRansac.h
lib/src/utils/: CommonStructs.h  Error.h  Logger.h  TestUtils.h  Timer.h  Utils.h  timer.h
lib/src/utils/json/: JsonConverters.cpp  JsonConverters.h
lib/src/utils/logger/: Logger.h  LoggingOverrides.h
output/: output.json
python/: CMakeLists.txt  README.md  build_and_install.sh  build_backend.py  build_hooks.py  build_python_lib.sh  conan_backend.py  distribute.sh  fix_stubs.py  generate_stubs.sh  install.sh  install_dev_and_stubs.sh  publish_to_pypi.sh  pyproject.toml  pytest.ini  python_conan.sh  setup.py  setup_deps.py
python/accurate_ri/: __init__.py  _accurate_ri.pyi  bindings.cpp
python/alice_lri/: _alice_lri.pyi
python/src/accurate_ri/: bindings.cpp
python/src/alice_lri/: bindings.cpp
python/tests/: __init__.py  test_installation.py
python/wheelhouse/: accurate_ri-0.1.0-py3-none-linux_x86_64.whl  accurate_ri-0.1.0-py3-none-manylinux_2_34_x86_64.whl
scripts/: alg_test.py  alg_test_out.txt  alg_test_out_tmp.txt  alg_test_out_tmp_sorted.txt  build_and_run_example.sh  build_release.sh  clion_conan.sh  conan_create.sh  merge_db.py  out.json  plot_debug_info.py  populate_experiments_db.py  run_from_logs.py  (+3 more)
tests/: CMakeLists.txt  CMakeUserPresets.json  INSTALLATION_TESTING.md  README.md  accurate_ri_tests.cpp  alice_array_tests.cpp  alice_lri_tests.cpp  hough_transform_tests.cpp  point_array_tests.cpp  stats_tests.cpp  test_installation.sh  utils_tests.cpp  vertical_intrinsics_tests.cpp
tests/integration/: CMakeLists.txt  test_installation.cpp
tests/point/: PointUtilsTest.cpp
(+27 files in other folders)
