[build-system]
requires = ["scikit-build-core", "pybind11", "pybind11-stubgen"]
build-backend = "scikit_build_core.build"

[project]
name = "accurate_ri"
version = "0.1.0"
description = "Python bindings for AccurateRI"
authors = [
    { name = "Samuel Soutullo", email = "s.soutullo@usc.es" }
]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20.0",
]
optional-dependencies.dev = [
    "pytest>=6.0",
    "pybind11-stubgen>=0.10.0",
    "mypy>=0.900",
]
optional-dependencies.test = [
    "pytest>=6.0",
    "numpy>=1.20.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.scikit-build]
cmake.version = ">=3.20"
build-dir = "build"
wheel.packages = ["accurate_ri"]
wheel.py-api = "py3"
install.components = ["python"]


[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE="Release"
LOG_LEVEL = "NONE"
ENABLE_TRACE_FILE="OFF"
ENABLE_PROFILING="OFF" 
LIB_MODE="ON"
